--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shoes for a Silly Goose</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <h2>Shoes for a Silly Goose</h2>
-        <div>
+        <div class="nav">
             <a href="#">Home</a>
             <a href="#">Products</a>
             <a href="#">Contact</a>
@@ -17,7 +17,8 @@
     </div>
 
     <div class="hero">
-
+        <h1>Shoes for a Silly Goose</h1>
+        <p>Quality shoes made for super silly geese</p>
     </div>
 
     <div class="products">
@@ -28,7 +29,7 @@
         
     </div>
 
-    <div class="footer+">
+    <div class="footer">
         
     </div>
 </body>
